--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,4 @@ dependencies:
         - opencv-contrib-python==4.1.2.30
         - torch==1.9.0
         - torchvision==0.10.0
+        - requests==2.22.0
